--- a/desdoc/Общие сведения о системе.md
+++ b/desdoc/Общие сведения о системе.md
@@ -62,14 +62,15 @@
 - выйти из игры
 
 ## Диаграмма прецедентов
-![](https://i.imgur.com/poaJjnA.png)
+![](https://i.imgur.com/HscnbpK.png)
 
 # Архитектура системы
 
 Архитектура системы - это способ дать общее представление о системе и поместить ее в контекст с внешними системами. Это позволяет читателю и пользователю документа самостоятельно ориентироваться в системе и видеть сводку, прежде чем переходить к деталям конструкции.
 
 ## Диаграмма компонентов
-![](https://i.imgur.com/jGhS5h8.png)
+![](https://i.imgur.com/MjhPlrW.png)
+
 
 # Логическая структура
 - Drawable - интерфейс для отрисовки объектов. Метод `draw(): char` возвращает unicode символ, визуализирующий объект. 
@@ -103,7 +104,7 @@
 - Randomizer - предоставляет методы для генерации объектов.
 
 ## Диаграмма классов
-![](https://i.imgur.com/EMXrNLR.png)
+![](https://i.imgur.com/V9smS7d.png)
 
 # Взаимодействия и состояния
 
@@ -115,3 +116,6 @@
 
 ## Диаграмма последовательностей использования предметов
 ![](https://i.imgur.com/kMZOtZE.png)
+
+## Диаграмма конечных автоматов
+![](https://i.imgur.com/s8epX0L.png)
