Update Общие сведения о системе.md

--- a/desdoc/Общие сведения о системе.md
+++ b/desdoc/Общие сведения о системе.md
@@ -17,7 +17,8 @@
 
 ## Границы системы
 
-Данный документ дает подробное описание архитектуры программного обеспечения. Он определяет структуру и конструкцию некоторых модулей, обсуждаемых в cпецификации требований программного обеспечения. Он также отображает некоторые варианты использования, которые были отображены в диаграммах последовательностей и диаграмме прецедентов. Диаграммы классов показывают, как команда программистов может реализовать конкретный модуль.
+Архитектура разработана в контексте наличия только консольной графики и пошаговой системы ходов.
+
 
 # Требования к программному обеспечению
 
@@ -66,7 +67,10 @@
 
 # Архитектура системы
 
-Архитектура системы - это способ дать общее представление о системе и поместить ее в контекст с внешними системами. Это позволяет читателю и пользователю документа самостоятельно ориентироваться в системе и видеть сводку, прежде чем переходить к деталям конструкции.
+Система состоит из нескольких компонентов.
+Компонент *Интерфейс консольного графического представления* отвечает за отоброжение на терминал состояния игры.
+Компонент *Подсистема генерации* отвечает за генерацию мира. Последнее включает в себя генерацию карт, генерацию мобов, генерацию снаряжения.
+Компонент *Игровая система RogueLike* инкапсулирует в себе *Модуль управления персонажем* и подсистему генерации и отвечает за игровой процесс в целом.
 
 ## Диаграмма компонентов
 ![](https://i.imgur.com/MjhPlrW.png)
